--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Festejando a união do campo a cidade</title>
 </head>
 <body>
-  <p></p>  
+  <p>O Agrinho está celebrando a união do campo com a cidade por várias razões importantes:
+Valorização do Agronegócio: Reconhecer a contribuição do campo para a economia e a segurança alimentar.
+Interconexão: Mostrar como o campo e a cidade são interligados, com o campo fornecendo alimentos e matérias-primas para a cidade.
+Conscientização: Educar sobre a importância da produção rural e a origem dos produtos.
+Cooperação: Fomentar a colaboração entre os setores rural e urbano, promovendo o desenvolvimento sustentável.
+Cultura e Tradição: Celebrar as raízes e tradições do campo, valorizando a cultura rural.
+Essa celebração visa fortalecer laços entre as comunidades e promover uma compreensão mútua, reconhecendo a importância de ambos os setores para o bem-estar social e econômico.
+</p>  
 </body>
 </html>
