--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@ Interconexão: Mostrar como o campo e a cidade são interligados, com o campo fo
 Conscientização: Educar sobre a importância da produção rural e a origem dos produtos.
 Cooperação: Fomentar a colaboração entre os setores rural e urbano, promovendo o desenvolvimento sustentável.
 Cultura e Tradição: Celebrar as raízes e tradições do campo, valorizando a cultura rural.
-Essa celebração visa fortalecer laços entre as comunidades e promover uma compreensão mútua, reconhecendo a importância de ambos os setores para o bem-estar social e econômico.
+Intercâmbio cultural: A festa pode ser uma oportunidade para compartilhar tradições, músicas e danças entre as comunidades rural e urbana.
+Valorização da produção local: O campo fornece produtos frescos para a cidade, e a festa pode ser uma forma de valorizar e agradecer essa produção.
+Conscientização ambiental: A união pode simbolizar a importância da sustentabilidade e do respeito ao meio ambiente, com a cidade aprendendo com as práticas mais naturais do campo.
+Fortalecimento de laços: A festa pode ser uma maneira de fortalecer os laços entre as pessoas que vivem no campo e na cidade, promovendo a compreensão e a cooperação mútua.
 </p>  
+
 </body>
 </html>
